# nova-driver

./: setup.cfg
etc/nova/: nova.conf
etc/nova/rootwrap.d/: compute.filters
nova/virt/libvirt/: driver2.py
nova/virt/libvirt/volume/: rbd.py
nova_driver/virt/libvirt/: driver2.py
