[metadata]
name = nova-driver
summary = Nova libvirt driver for rbd volume encryption
author = Cheng Li
author-email = shcli@cn.ibm.com
home-page = http://www.blueboxcloud.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    nova_driver
